# Nyquestro

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
context/: ARCHITECTURE.md  CORE_TYPES.md  EVENTS_AND_ERRORS.md  IMPLEMENT_NOW_CORE_HARDEN_BOOK_MVP.md  MATCHING_ENGINE.md  ORDER_MODEL.md  _staleness-report.md  architecture.html  notes.md
context/arch/: app.js  data.js  features.js  graph.js  index.html  styles.css
context/notes/: conventions.md  dashboard-design.md  free-data-sources.md  hft-firm-priorities.md  safe-rust-philosophy.md  telemetry-policy.md
context/plans/: benchmark-harness.md  cpp-reference-impl.md  dashboard-infographics.md  extended-order-types.md  extensive-testing-framework.md  itch-replay-harness.md  live-crypto-feed.md  lock-free-engine.md  medium-wins.md  property-based-tests.md  recovery-and-event-log.md  risk-layer.md  small-wins.md  telemetry-and-profiling.md  wire-protocol-gateway.md
context/systems/: book.md  errors.md  events.md  feed.md  metrics.md  order.md  simulator.md  telemetry.md  types.md  ui.md
examples/: live_smoke.rs  telemetry_smoke.rs
learning/: _inventory.md  _phase_plan.md
plans/: 001_immutable_event_frames_and_error_expansion.md  002_deterministic_matcher_loop.md  README.md  architecture.md
src/: errors.rs  lib.rs  main.rs  order.rs  price_level.rs  types.rs
src/book/: market.rs  mod.rs  order_book.rs  price_level.rs
src/events/: fill.rs  fill_event.rs  lifecycle.rs  mod.rs  order_event.rs  quote.rs  (+1 more)
tests/: event_tests.rs  events_test.rs  matching_test.rs  order_test.rs  price_level_test.rs  types_test.rs
(+16 files in other folders)
