[package]
name = "nyquestro"
version = "0.1.0"
edition = "2024"
description = "From-scratch order matching engine in safe Rust, with a real-time observability TUI."
license = "MIT"

[dependencies]
chrono = "0.4"
thiserror = "1.0"
hdrhistogram = "7.5"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
dirs = "5"

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
needless_collect = "warn"
redundant_clone = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
